--- a/src/markdownEditor.css
+++ b/src/markdownEditor.css
@@ -22,10 +22,11 @@
 }
 
 .md-markdown-editor textarea {
+    font-family: monospace;
     width: 100%;
     height: 100%; 
     padding: 10px;
-    background: rgb(98, 101, 118);
-    color: #d6d3c3;
+    background: rgb(92, 93, 96);
+    color: rgb(180, 214, 179);
     font-size: 1.45em;
 }
