--- a/src/markdownEditor.css
+++ b/src/markdownEditor.css
@@ -17,7 +17,7 @@
     padding: 10px;
     margin: 0 10px;
     border: 1px solid; 
-    max-height: 100%;
+    height: 100%;
     overflow: auto;
 }
 
