--- a/src/markdownEditor.css
+++ b/src/markdownEditor.css
@@ -31,3 +31,8 @@
     color: rgb(94, 245, 89);
     font-size: 1.25em;
 }
+
+.md-markdown-editor .md-button-bar button {
+    font-size: 1.2em;
+    font-weight: bold;
+}
