--- a/src/markdownEditor.css
+++ b/src/markdownEditor.css
@@ -2,6 +2,7 @@
 .md-markdown-editor {
     width: 100%;
     height: 450px;
+    margin-bottom: 40px;
 }
 
 
@@ -10,6 +11,12 @@
     height: 100%;
     display: inline-block;
     vertical-align: top;
+}
+
+
+.md-markdown-editor .md-column:first-child {
+    padding-top: 30px;
+    position: relative;
 }
 
 
@@ -32,7 +39,14 @@
     font-size: 1.25em;
 }
 
+.md-markdown-editor .md-button-bar {
+    position:absolute;
+    top: 0;
+}
+
 .md-markdown-editor .md-button-bar button {
     font-size: 1.2em;
     font-weight: bold;
+    height: 30px;
+    line-height: 30px;
 }
